# sibdev

./: .gitignore  README.md  docker-compose.yml
parser/: Dockerfile  README.md  docker-compose.yml  models.py  parser.py  pyproject.toml
server/: Dockerfile  celerybeat-schedule  pyproject.toml
server/config/: settings.py  urls.py
server/contrib/: urls.py
server/contrib/migrations/: 0001_initial.py  0002_delete_basemodel.py
server/contrib/models/: base_model.py
server/user/: admin.py  backends.py  serializers.py  tasks.py  tests.py  urls.py  views.py
server/user/migrations/: 0001_initial.py  0002_emailconfirmation.py  0003_auto_20201013_1323.py  0004_auto_20201014_1134.py  0005_auto_20201014_1230.py  0006_auto_20201014_1254.py  0007_auto_20201017_0424.py  0008_user_hash_precedent_integer.py  0009_auto_20201019_0214.py  0010_auto_20201022_0234.py
server/user/models/: __init__.py  emai_confirmation.py  emai_confirmation_token.py  precedent.py  user.py
server/user/templates/: email_confirmation.html
server/user/tests/: __init__.py  tests_activate_email.py  tests_precedent.py  tests_unit.py  tests_user.py
server/user/unit/: __init__.py  hash_precedent.py  hash_user.py  similarity.py
