[tool.poetry]
name = "test_sibsev"
version = "0.1.0"
description = "test_sibdev"
authors = ["ataraspost@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^2.2.0"
psycopg2-binary = "^2.8"
ipython = "^7.3"
django-debug-toolbar = "^2.2"
ipdb = "^0.12.0"
jwt = "^1.0.0"
djangorestframework = "^3.12.1"
PyJWT = "^1.7.1"
django-rest-framework = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
